--- a/src/components/schema/generic/newGenericModal.html
+++ b/src/components/schema/generic/newGenericModal.html
@@ -53,10 +53,19 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group"
+                 ng-class="{ 'has-error' : (classForm.clusterNumber.$error.min || classForm.clusterNumber.$error.number)}">
               <label class="control-label col-md-2"> Number of Clusters</label>
               <div class="col-md-10">
-                <input type="number" class="form-control" ng-model="$ctrl.property['clusters']"/>
+                <input type="number" name="clusterNumber" min="1" class="form-control"
+                       ng-model="$ctrl.property['clusters']"/>
+              </div>
+              <div class="col-md-10 col-md-offset-2">
+                <span ng-show="classForm.clusterNumber.$error.min"
+                      class="help-block help-block-sm ">Number of clusters should be >= 1</span>
+
+                <span ng-show="classForm.clusterNumber.$error.number"
+                      class="help-block help-block-sm ">Invalid Number</span>
               </div>
             </div>
           </form>
