--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -37,7 +37,7 @@ body {
 }
 
 .landing-page {
-  background: url("../img/sunrise-beach.jpg") no-repeat 0 0 #f6f6f6;
+  background: url("../img/background.jpg") no-repeat 0 0 #f6f6f6;
   background-size: cover;
 }
 
@@ -80,11 +80,12 @@ body div.container-studio {
   margin-top: -5px;
 }
 
-.panel-node-actions{
+.panel-node-actions {
   display: inline-block;
   float: right;
   margin-top: -2px;
 }
+
 .console_class_functions .jumbotron {
   padding: 0px;
 }
@@ -1316,4 +1317,23 @@ table.table-backup {
 
 .ee-disabled {
   pointer-events: all !important;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #222222;
+}
+
+.footer > .container {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.container .text-muted {
+  margin: 10px 0;
+  color: #f5f5f5;
+  text-align: center;
 }
